# ihc-control_fw

./: .gitignore  CMakeLists.txt  README.md  avr.cmake  avr.toolchain.cmake  avrdude.cmake  connection-plan.odp  wire-labels.ods
application/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/evaluateSwitch/: CMakeLists.txt  evaluateSwitch.cpp  evaluateSwitch.hpp
include/gpio/: CMakeLists.txt  a2d.c  a2d.h  gpio_evaluateSwitch.cpp  gpio_evaluateSwitch.hpp  gpio_output.cpp  gpio_output.hpp
include/time/: CMakeLists.txt  clock.cpp  clock.hpp  pulse.cpp  pulse.hpp  time.c  time.h
